-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 15
-
Component/s: hotspot
-
b27
-
x86_64
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8248106 | 16 | Thomas Stuefe | P3 | Resolved | Fixed | team |
The following test failed in the JDK15 CI:
runtime/cds/appcds/TestCombinedCompressedFlags.java
Here's a snippet from the log file:
----------System.err:(37/2865)----------
stdout: [[0.029s][info][cds] trying to map /scratch/mesos/slaves/63712a43-4eaa-429c-95b4-483ac8241123-S967/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c0e03a36-df3d-4d97-a0b1-b7750f4d7d4f/runs/bbd72368-d6ac-41ec-9aee-71db9aff29f8/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_cds_relocation/scratch/0/appcds-12h07m30s740.jsa
[0.029s][info][cds] Opened archive /scratch/mesos/slaves/63712a43-4eaa-429c-95b4-483ac8241123-S967/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c0e03a36-df3d-4d97-a0b1-b7750f4d7d4f/runs/bbd72368-d6ac-41ec-9aee-71db9aff29f8/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_cds_relocation/scratch/0/appcds-12h07m30s740.jsa.
[0.029s][info][cds] Archive was created with UseCompressedOops = 1, UseCompressedClassPointers = 0
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/virtualMemoryTracker.cpp:388
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/scratch/mesos/slaves/63712a43-4eaa-429c-95b4-483ac8241123-S952/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/8586a222-ab15-48b7-939b-a336daeb3311/runs/a01d24ca-8cee-4a7a-b16e-0fe72e00abfe/workspace/open/src/hotspot/share/services/virtualMemoryTracker.cpp:388), pid=85867, tid=8963
# Error: ShouldNotReachHere()
#
# JRE version: (15.0+27) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-ea+27-1336, mixed mode, sharing, tiered, compressed oops, g1 gc, bsd-amd64)
# Core dump will be written. Default location: core.85867
#
# An error report file with more information is saved as:
# /scratch/mesos/slaves/63712a43-4eaa-429c-95b4-483ac8241123-S967/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c0e03a36-df3d-4d97-a0b1-b7750f4d7d4f/runs/bbd72368-d6ac-41ec-9aee-71db9aff29f8/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_cds_relocation/scratch/0/hs_err_pid85867.log
#
#
];
stderr: []
exitValue = 134
java.lang.RuntimeException: 'Hello World' missing from stdout/stderr
at jdk.test.lib.process.OutputAnalyzer.shouldContain(OutputAnalyzer.java:189)
at TestCombinedCompressedFlags.main(TestCombinedCompressedFlags.java:178)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:64)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:564)
at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:298)
at java.base/java.lang.Thread.run(Thread.java:832)
JavaTest Message: Test threw exception: java.lang.RuntimeException
JavaTest Message: shutting down test
result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: 'Hello World' missing from stdout/stderr
test result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: 'Hello World' missing from stdout/stderr
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x00007ff503018030): JavaThread "Unknown thread" [_thread_in_vm, id=8963, stack(0x000000010a678000,0x000000010a778000)]
Stack: [0x000000010a678000,0x000000010a778000], sp=0x000000010a7771e0, free space=1020k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x109341d] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6ed
V [libjvm.dylib+0x1093b51] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x41
V [libjvm.dylib+0x563d22] report_vm_error(char const*, int, char const*, char const*, ...)+0x142
V [libjvm.dylib+0x1085a96] VirtualMemoryTracker::add_reserved_region(unsigned char*, unsigned long, NativeCallStack const&, MemoryType)+0x5c6
V [libjvm.dylib+0xdaf57b] os::map_memory(int, char const*, unsigned long, char*, unsigned long, bool, bool, MemoryType)+0x12b
V [libjvm.dylib+0x638a2a] FileMapInfo::map_region(int, long, char*, ReservedSpace)+0x1da
V [libjvm.dylib+0x638550] FileMapInfo::map_regions(int*, int, char*, ReservedSpace)+0x90
V [libjvm.dylib+0xcfde00] MetaspaceShared::map_archive(FileMapInfo*, char*, ReservedSpace)+0xb0
V [libjvm.dylib+0xcfd1b0] MetaspaceShared::map_archives(FileMapInfo*, FileMapInfo*, bool)+0x330
V [libjvm.dylib+0xcfcab2] MetaspaceShared::initialize_runtime_shared_and_meta_spaces()+0x112
V [libjvm.dylib+0xcf097b] Metaspace::global_initialize()+0x6b
V [libjvm.dylib+0x10274f2] universe_init()+0x1a2
V [libjvm.dylib+0x7d77b4] init_globals()+0x74
V [libjvm.dylib+0xff5dd8] Threads::create_vm(JavaVMInitArgs*, bool*)+0x388
V [libjvm.dylib+0x9040cb] JNI_CreateJavaVM+0x8b
C [libjli.dylib+0x4472] JavaMain+0x122
C [libjli.dylib+0x7599] ThreadJavaMain+0x9
C [libsystem_pthread.dylib+0x3661] _pthread_body+0x154
C [libsystem_pthread.dylib+0x350d] _pthread_body+0x0
C [libsystem_pthread.dylib+0x2bf9] thread_start+0xd
runtime/cds/appcds/TestCombinedCompressedFlags.java
Here's a snippet from the log file:
----------System.err:(37/2865)----------
stdout: [[0.029s][info][cds] trying to map /scratch/mesos/slaves/63712a43-4eaa-429c-95b4-483ac8241123-S967/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c0e03a36-df3d-4d97-a0b1-b7750f4d7d4f/runs/bbd72368-d6ac-41ec-9aee-71db9aff29f8/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_cds_relocation/scratch/0/appcds-12h07m30s740.jsa
[0.029s][info][cds] Opened archive /scratch/mesos/slaves/63712a43-4eaa-429c-95b4-483ac8241123-S967/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c0e03a36-df3d-4d97-a0b1-b7750f4d7d4f/runs/bbd72368-d6ac-41ec-9aee-71db9aff29f8/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_cds_relocation/scratch/0/appcds-12h07m30s740.jsa.
[0.029s][info][cds] Archive was created with UseCompressedOops = 1, UseCompressedClassPointers = 0
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc: SuppressErrorAt=/virtualMemoryTracker.cpp:388
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/scratch/mesos/slaves/63712a43-4eaa-429c-95b4-483ac8241123-S952/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/8586a222-ab15-48b7-939b-a336daeb3311/runs/a01d24ca-8cee-4a7a-b16e-0fe72e00abfe/workspace/open/src/hotspot/share/services/virtualMemoryTracker.cpp:388), pid=85867, tid=8963
# Error: ShouldNotReachHere()
#
# JRE version: (15.0+27) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-ea+27-1336, mixed mode, sharing, tiered, compressed oops, g1 gc, bsd-amd64)
# Core dump will be written. Default location: core.85867
#
# An error report file with more information is saved as:
# /scratch/mesos/slaves/63712a43-4eaa-429c-95b4-483ac8241123-S967/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/c0e03a36-df3d-4d97-a0b1-b7750f4d7d4f/runs/bbd72368-d6ac-41ec-9aee-71db9aff29f8/testoutput/test-support/jtreg_open_test_hotspot_jtreg_hotspot_cds_relocation/scratch/0/hs_err_pid85867.log
#
#
];
stderr: []
exitValue = 134
java.lang.RuntimeException: 'Hello World' missing from stdout/stderr
at jdk.test.lib.process.OutputAnalyzer.shouldContain(OutputAnalyzer.java:189)
at TestCombinedCompressedFlags.main(TestCombinedCompressedFlags.java:178)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:64)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:564)
at com.sun.javatest.regtest.agent.MainActionHelper$AgentVMRunnable.run(MainActionHelper.java:298)
at java.base/java.lang.Thread.run(Thread.java:832)
JavaTest Message: Test threw exception: java.lang.RuntimeException
JavaTest Message: shutting down test
result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: 'Hello World' missing from stdout/stderr
test result: Failed. Execution failed: `main' threw exception: java.lang.RuntimeException: 'Hello World' missing from stdout/stderr
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x00007ff503018030): JavaThread "Unknown thread" [_thread_in_vm, id=8963, stack(0x000000010a678000,0x000000010a778000)]
Stack: [0x000000010a678000,0x000000010a778000], sp=0x000000010a7771e0, free space=1020k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x109341d] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6ed
V [libjvm.dylib+0x1093b51] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x41
V [libjvm.dylib+0x563d22] report_vm_error(char const*, int, char const*, char const*, ...)+0x142
V [libjvm.dylib+0x1085a96] VirtualMemoryTracker::add_reserved_region(unsigned char*, unsigned long, NativeCallStack const&, MemoryType)+0x5c6
V [libjvm.dylib+0xdaf57b] os::map_memory(int, char const*, unsigned long, char*, unsigned long, bool, bool, MemoryType)+0x12b
V [libjvm.dylib+0x638a2a] FileMapInfo::map_region(int, long, char*, ReservedSpace)+0x1da
V [libjvm.dylib+0x638550] FileMapInfo::map_regions(int*, int, char*, ReservedSpace)+0x90
V [libjvm.dylib+0xcfde00] MetaspaceShared::map_archive(FileMapInfo*, char*, ReservedSpace)+0xb0
V [libjvm.dylib+0xcfd1b0] MetaspaceShared::map_archives(FileMapInfo*, FileMapInfo*, bool)+0x330
V [libjvm.dylib+0xcfcab2] MetaspaceShared::initialize_runtime_shared_and_meta_spaces()+0x112
V [libjvm.dylib+0xcf097b] Metaspace::global_initialize()+0x6b
V [libjvm.dylib+0x10274f2] universe_init()+0x1a2
V [libjvm.dylib+0x7d77b4] init_globals()+0x74
V [libjvm.dylib+0xff5dd8] Threads::create_vm(JavaVMInitArgs*, bool*)+0x388
V [libjvm.dylib+0x9040cb] JNI_CreateJavaVM+0x8b
C [libjli.dylib+0x4472] JavaMain+0x122
C [libjli.dylib+0x7599] ThreadJavaMain+0x9
C [libsystem_pthread.dylib+0x3661] _pthread_body+0x154
C [libsystem_pthread.dylib+0x350d] _pthread_body+0x0
C [libsystem_pthread.dylib+0x2bf9] thread_start+0xd
- backported by
-
JDK-8248106 TestCombinedCompressedFlags.java failed src/hotspot/share/services/virtualMemoryTracker.cpp:388 Error: ShouldNotReachHere()
-
- Resolved
-
- relates to
-
JDK-8243535 NMT may show wrong numbers for CDS and CCS
-
- Resolved
-